RESOLVED FIXED311659
AX: AXIsolatedTree::updateChildren should not stop iterating the ancestry when it encounters a detached object
https://bugs.webkit.org/show_bug.cgi?id=311659
Summary AX: AXIsolatedTree::updateChildren should not stop iterating the ancestry whe...
Tyler Wilcock
Reported 2026-04-07 10:49:20 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-07 10:49:26 PDT
Tyler Wilcock
Comment 2 2026-04-07 10:52:17 PDT
EWS
Comment 3 2026-04-07 15:29:39 PDT
Committed 310744@main (571fc1faa8c9): <https://commits.webkit.org/310744@main> Reviewed commits have been landed. Closing PR #62206 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.