AX: AXIsolatedTree::updateChildren should not stop iterating the ancestry when it encounters a detached object https://bugs.webkit.org/show_bug.cgi?id=311659 rdar://174251536

Reviewed by Joshua Hoffman.

Objects can be detached for various reasons (e.g. an AccessibilityRenderObject is missing a renderer and node).
These are fair definitions of "is detached", but they shouldn't stop an attempt to iterate the ancestry to find
the nearest in-tree ancestor to update the isolated tree with.

* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateChildren):

Canonical link: https://commits.webkit.org/310744@main